--- a/control-panel/backend/package.json
+++ b/control-panel/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend functions of the main website",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "build": "node index.js"
   },
   "repository": {
     "type": "git",
